# TinyKafka

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  build.sh  run_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  consumer_bench.cpp  kafka_compare.sh  producer_bench.cpp  run.sh  run_all.sh  setup_metadata.py
docs/: roadmap_v1.md  roadmap_v2.md
scripts/: install-hook.sh  pre-commit
src/: main.cpp  protocol.hpp  server.hpp
src/broker/: broker.cpp  broker.hpp  group_coordinator.cpp  group_coordinator.hpp  metadata_handler.cpp  metadata_handler.hpp  metrics.hpp  partition_context.hpp  record_handler.cpp  record_handler.hpp
src/cluster/: metadata.cpp  metadata.hpp
src/config/: config.cpp  config.hpp  properties.cpp  properties.hpp
src/logging/: logger.cpp  logger.hpp
src/net/: io_awaiter.hpp  reactor.cpp  reactor.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  task.hpp
src/protocol/: api_registry.hpp  parser.cpp  parser.hpp  request.hpp  response.hpp  serializer.cpp  serializer.hpp
src/shard/: cross_reactor_queue.hpp  shard_router.hpp
src/storage/: log_reader.cpp  log_reader.hpp  log_writer.cpp  log_writer.hpp  partition_log.hpp
src/util/: arena.hpp  byte_reader.hpp  byte_writer.hpp  endian.hpp  overloaded.hpp  record_batch.hpp  varint.hpp
tests/: CMakeLists.txt  integration_test.cpp  protocol_test.cpp
tests/broker/: broker_test.cpp  metrics_test.cpp
tests/cluster/: metadata_test.cpp
tests/common/: test_helpers.hpp
tests/config/: config_test.cpp
tests/logging/: logger_test.cpp
tests/protocol/: parser_test.cpp  serializer_test.cpp
tests/shard/: shard_test.cpp
